cpp: add msvc10 projects
sln, vcxproj, vcxproj.filters, .gitignore, and .gitattributes

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,23 @@ _test
 /csharp/MsgPack.Test/obj
 /csharp/MsgPack.Test/bin
 /csharp/MsgPack.Test/MsgPack.Test.csproj.user
+/cpp/msgpack_vc10.vcxproj.user
+/cpp/msgpack_vc10.opensdf
+/cpp/msgpack_vc10.sdf
+/cpp/msgpack_vc10.suo
+/cpp/Debug/
+/cpp/Release/
+/cpp/msgpack_vc2008.sln
+/cpp/msgpack_vc2008.vcproj
+/cpp/src/msgpack/pack_define.h
+/cpp/src/msgpack/pack_template.h
+/cpp/src/msgpack/sysdep.h
+/cpp/src/msgpack/type/define.hpp
+/cpp/src/msgpack/type/tuple.hpp
+/cpp/src/msgpack/unpack_define.h
+/cpp/src/msgpack/unpack_template.h
+/cpp/src/msgpack/zone.hpp
+/cpp/test/cases.mpac
+/cpp/test/cases_compact.mpac
+/cpp/include
+/cpp/lib
